fix pb getLast